- added @contextmanager, ContextDecorator
- added @(log|print)_(enters|exits)
- print stack trace in @(log|print)_(calls|errors)
- added label argument for tap()
- better formatted call signatures in debug utilities
- added itervalues()
- exposed empty(), iteritems()
- exposed @wraps and unwrap()
- slightly optimized last() and nth()

1.1
- added merge_with() and join_with()
- added @once, @once_per_args and @once_per()
- added suppress() context manager
- added is_set()
- added name argument to @monkey
- decorators created with @decorator now set __original__ attribute
- optimized @decorator
- optimized nth() and last()
- lzip() is now exported by default from/for py3
Backward incompatible fixes:
- made pluck(), where() and invoke() return interators in python 3
- __wrapped__ attribute added by decorators now correctly refers to immediate wrapped not innermost

1.0.0
- @silent, @ignore() and decorators created with @decorator will now work
  with method_descriptors and other non-wrappable callables.
- chained decorators now have access to arguments by name
- exposed cut_prefix() and cut_suffix()
- optimized re_tester()
- fixed @retry in python 3
Backward incompatible changes:
- function made from dict will now use __getitem__ instead of get.
  Means possible KeyErrors for dicts and factory function calls for defaultdict.
  Use `a_dict.get` instead of just `a_dict` for old behaviour.
- reverted imap(None, seq) to default strange behaviour.

0.10.1
- optimized @decorator

0.10
- added is_tuple()
- raiser() can now be called without arguments, defaults to Exception
- support del @cached_property
- optimized and cleaned up @cached_property
- optimized i?split(), split_at() and split_by()
- optimized @memoize
- optimized zipdict()
Backward incompatible changes:
- split(), split_at() and split_by() now return a tuple of two lists instead of list of them
- @cached_property no longer uses _name to store cached value