@@ -7,6 +7,7 @@
 - exposed empty(), iteritems()
 - exposed @wraps and unwrap()
 - slightly optimized last() and nth()
+- fixed signatures of functions wrapper with @wrap_(mapper|selector)
 
 1.1
 - added merge_with() and join_with()
